update reading history